# myscan

./: .gitignore  README.md  build.sh  myscan.cfg.sample  restart.sh
src/: CMakeLists.txt  client_http.hpp  myscan.cpp  server_http.hpp  storage.cpp  storage.hpp  utils.cpp  utils.hpp
